# jets

./: .gitignore  CLAUDE.md  Cargo.toml  GENERATOR.md  JETS.md  LICENSE
.claude/: settings.json
.claude/commands/: git_commit.md  jets_feature.md
src/: jets-gui.rs  lib.rs  parser.rs  pipetrace_reader.rs  string_intern.rs  theme.rs  tracegen.rs  traits.rs  virtual_reader.rs  writer.rs
src/app/: app_state.rs  application_coordinator.rs  mod.rs  settings_coordinator.rs  theme_coordinator.rs
src/cache/: mod.rs  tree_cache.rs
src/domain/: mod.rs  sorting.rs  tree_operations.rs  viewport_operations.rs  visibility.rs
src/io/: async_loader.rs  file_loader.rs  mod.rs
src/presentation/: color_mapping.rs  mod.rs
src/rendering/: mod.rs  text_utils.rs  time_axis_renderer.rs  timeline_overlays.rs  timeline_renderer.rs  tree_renderer.rs
src/state/: interaction.rs  layout_state.rs  mod.rs  selection.rs  theme_state.rs  trace_state.rs  tree_state.rs  viewport.rs
src/ui/: details_panel.rs  header.rs  mod.rs  panel_manager.rs  status_bar.rs  table_header.rs  timeline_panel.rs  tree_panel.rs  virtual_scroll_manager.rs  virtual_scrolling.rs
src/ui/input/: mod.rs  timeline_input_handler.rs
src/utils/: formatting.rs  geometry.rs  mod.rs
tests/: integration_test.rs  trace.jets
