[package]
name = "rjets"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
eframe = { version = "0.33", features = ["persistence"] }
egui = "0.33"
anyhow = "1.0"
rfd = "0.15"
rand = "0.8"
once_cell = "1.20"
dirs = "5.0"
brotli = "8.0.2"
sysinfo = "0.30"

[[bin]]
name = "jets-gui"
path = "src/jets-gui.rs"

[[bin]]
name = "jets-tracegen"
path = "src/tracegen.rs"

[lib]
name = "rjets"
path = "src/lib.rs"
